# modern-cpp

./: .clang-tidy  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
app/: CMakeLists.txt
ci/linux/: build.sh  test.sh
ci/windows/: build.cmd  test.cmd
docker/: Dockerfile  build.sh
examples/example/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/mylib/: public.h
lib/src/: private.cpp  private.h  public.cpp
setup/: ArchLinux.sh
tests/: CMakeLists.txt  main.cpp
tests/lib/src/: private.cpp  public.cpp
